--- a/GadgetZone/src/main/resources/application.yaml
+++ b/GadgetZone/src/main/resources/application.yaml
@@ -1,9 +1,11 @@
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/gadget_zone?useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://127.0.0.1:3306/gadgetzone?useSSL=false&serverTimezone=UTC
     username: root
     password: 12345
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   flyway:
-    baseline-on-migrate: true
+    enabled: true
+    baseline-on-migrate: true 
+    locations: classpath:db/migration 
