--- a/GadgetZone/src/main/resources/application.yaml
+++ b/GadgetZone/src/main/resources/application.yaml
@@ -9,3 +9,9 @@ spring:
     enabled: true
     baseline-on-migrate: true 
     locations: classpath:db/migration 
+
+logging:
+  level:
+    "[org.springframework.jdbc.core]": DEBUG        
+    "[org.springframework.jdbc.resultset]": TRACE   
+    "[com.GadgetZone.dao]": DEBUG              
