убрал часть ошибок и добавил почти рабочую регистрацию

--- a/GadgetZone/src/main/resources/application.yaml
+++ b/GadgetZone/src/main/resources/application.yaml
@@ -14,4 +14,5 @@ logging:
   level:
     "[org.springframework.jdbc.core]": DEBUG        
     "[org.springframework.jdbc.resultset]": TRACE   
-    "[com.GadgetZone.dao]": DEBUG              
+    "[com.GadgetZone.dao]": DEBUG
+#    "[org.springframework.security]": DEBUG
