--- a/GadgetZone/src/main/resources/application.yaml
+++ b/GadgetZone/src/main/resources/application.yaml
@@ -6,24 +6,33 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   flyway:
-    enabled: true
     baseline-on-migrate: true
     locations: classpath:db/migration
 
   mail:
+    default-encoding: UTF-8
     host: smtp.gmail.com
     port: 587
-    username: edik076mvs@gmail.com
-    password: qwerty!12345!
+    username: demavarlamov@gmail.com
+    password: "lnio eszi aeyy sztd"
+    protocol: smtp
+    test-connection: true
     properties:
       mail:
         smtp:
           auth: true
           starttls:
             enable: true
+            required: true
+          ssl:
+            trust: smtp.gmail.com
+          from: demavarlamov@gmail.com
+        debug: true
 
 logging:
   level:
     "[org.springframework.jdbc.core]": DEBUG
     "[org.springframework.jdbc.resultset]": TRACE
     "[com.GadgetZone.dao]": DEBUG
+    "[org.springframework.mail]": DEBUG
+    "[com.GadgetZone]": DEBUG
