--- a/GadgetZone/src/main/resources/application.yaml
+++ b/GadgetZone/src/main/resources/application.yaml
@@ -1,3 +1,6 @@
+app:
+  url: http://localhost:8080
+
 spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/gadgetzone?useSSL=false&serverTimezone=UTC
@@ -36,3 +39,5 @@ logging:
     "[com.GadgetZone.dao]": DEBUG
     "[org.springframework.mail]": DEBUG
     "[com.GadgetZone]": DEBUG
+    org.springframework.security.authentication: DEBUG
+    com.GadgetZone.service.CustomUserDetailsService: TRACE
