--- a/GadgetZone/src/main/resources/application.yaml
+++ b/GadgetZone/src/main/resources/application.yaml
@@ -1,12 +1,28 @@
 app:
   url: http://localhost:8080
 
+upload:
+  dir: ./images
+
+server:
+  servlet:
+    session:
+      timeout: 30m
+
 spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/gadgetzone?useSSL=false&serverTimezone=UTC
     username: root
     password: 12345
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+  session:
+    store-type: jdbc
+
+  servlet:
+    multipart:
+      max-file-size: 5MB
+      max-request-size: 5MB
 
   flyway:
     baseline-on-migrate: true
