очень много доработок

--- a/GadgetZone/src/main/resources/application.yaml
+++ b/GadgetZone/src/main/resources/application.yaml
@@ -57,3 +57,6 @@ logging:
     "[com.GadgetZone]": DEBUG
     org.springframework.security.authentication: DEBUG
     com.GadgetZone.service.CustomUserDetailsService: TRACE
+    org.springframework.security: DEBUG
+    org:
+      springframework=DEBUG:
